# stock-backtesting-engine-streamlit-ui

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml
utils/: tickers_auto_suggession.py
